Fixed a bug with links to packages from module pages